[package]
name = "www-redirector"
version = "0.2.0"
edition = "2021"

[dependencies]
axum = "0.7"
tracing = { version = "0.1" }
tokio = { version = "1.36", features = ["full"] }
tower = { version = "0.4", features = ["full"] }
tower-http = { version = "0.5", features = ["full"] }
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
